added local storage to file system

--- a/extention/success-page.html
+++ b/extention/success-page.html
@@ -16,7 +16,7 @@
       <textarea name="content" id="content" placeholder="Type your content here..."></textarea>
     </div>
     <div class="field">
-      <button type="submit">See your Config/ Save New files</button>
+      <button type="submit">See your Config/ save new files</button>
       <div id="messages"></div>
     </div>
   </form>
@@ -28,6 +28,7 @@
 
 </div>
 <script src="fileSystem.js"></script>
-<script src="require.js"></script>
+
 </body>
+</html>
 </html>
