--- a/extention/filePage.html
+++ b/extention/filePage.html
@@ -27,6 +27,7 @@
   </div>
 
 </div>
+<script src="https://apis.google.com/js/api.js"></script>
 <script src="fileSystem.js"></script>
 <script src="require.js"></script>
 </body>
