--- a/extention/filePage.html
+++ b/extention/filePage.html
@@ -20,14 +20,20 @@
       <div id="messages"></div>
     </div>
   </form>
-
+<p id = ".post__title"></p>
   <div id="files">
     <h2>File Browser</h2>
     <ul id="file-list"></ul>
   </div>
 
 </div>
-<script src="https://apis.google.com/js/api.js"></script>
+<button id="authorize_button" style="display: none;">Authorize</button>
+<button id="signout_button" style="display: none;">Sign Out</button>
+
+<pre id="content" style="white-space: pre-wrap;"></pre>
+
+<script src="https://apis.google.com/js/client.js?onload=onGAPILoad"></script>
+
 <script src="fileSystem.js"></script>
 <script src="require.js"></script>
 </body>
